--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ActDetTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ActDetTableViewCell.xib
@@ -15,44 +15,48 @@
                 <rect key="frame" x="0.0" y="0.0" width="543" height="314"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2w8-5N-OHx">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2w8-5N-OHx">
                         <rect key="frame" x="8" y="8" width="527" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="RK9-Yg-Py9"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0I0-GY-uQj">
-                        <rect key="frame" x="8" y="51" width="152" height="234"/>
+                        <rect key="frame" x="8" y="51" width="140" height="215"/>
+                        <color key="backgroundColor" red="0.89099984219999995" green="0.89099984219999995" blue="0.89099984219999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="0I0-GY-uQj" secondAttribute="height" multiplier="15:23" id="SAm-FF-ASO"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="时 间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YS3-TX-L8r">
-                        <rect key="frame" x="181" y="56" width="49" height="18"/>
+                        <rect key="frame" x="158" y="56" width="49" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6F-3F-38f">
-                        <rect key="frame" x="240" y="56" width="295" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H6F-3F-38f">
+                        <rect key="frame" x="217" y="56" width="318" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="地 址：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eGx-Gq-ccf">
-                        <rect key="frame" x="181" y="111" width="49" height="18"/>
+                        <rect key="frame" x="158" y="111" width="49" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="费 用：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7f-fn-79w">
-                        <rect key="frame" x="181" y="171" width="49" height="18"/>
+                        <rect key="frame" x="158" y="171" width="49" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ySZ-ek-eup">
-                        <rect key="frame" x="240" y="171" width="295" height="18"/>
+                        <rect key="frame" x="217" y="171" width="318" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -65,39 +69,39 @@
                         </constraints>
                         <state key="normal" title="Button" image="shop_detail_addr.png"/>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PiQ-sJ-avt">
-                        <rect key="frame" x="240" y="111" width="263" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PiQ-sJ-avt">
+                        <rect key="frame" x="217" y="111" width="286" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="类 型：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hOw-5a-dWR">
-                        <rect key="frame" x="181" y="216" width="49" height="18"/>
+                        <rect key="frame" x="158" y="216" width="49" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="主 办：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3e-cS-bYO">
-                        <rect key="frame" x="181" y="261" width="49" height="18"/>
+                        <rect key="frame" x="158" y="261" width="49" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SxO-t3-RX5">
-                        <rect key="frame" x="240" y="216" width="295" height="18"/>
+                        <rect key="frame" x="217" y="216" width="318" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilz-E3-wbY">
-                        <rect key="frame" x="240" y="261" width="295" height="18"/>
+                        <rect key="frame" x="217" y="261" width="318" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="hOw-5a-dWR" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="21" id="0sa-jD-igo"/>
+                    <constraint firstItem="hOw-5a-dWR" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="10" id="0sa-jD-igo"/>
                     <constraint firstItem="hOw-5a-dWR" firstAttribute="top" secondItem="u7f-fn-79w" secondAttribute="bottom" constant="32" id="1Uu-w6-gPP"/>
                     <constraint firstItem="PiQ-sJ-avt" firstAttribute="leading" secondItem="eGx-Gq-ccf" secondAttribute="trailing" constant="10" id="1l6-Hc-bxT"/>
                     <constraint firstAttribute="trailingMargin" secondItem="H6F-3F-38f" secondAttribute="trailing" id="1r0-vo-cc9"/>
@@ -105,16 +109,16 @@
                     <constraint firstAttribute="leadingMargin" secondItem="0I0-GY-uQj" secondAttribute="leading" id="B1t-cU-jhg"/>
                     <constraint firstItem="PiQ-sJ-avt" firstAttribute="centerY" secondItem="eGx-Gq-ccf" secondAttribute="centerY" constant="5" id="CHR-bA-EEs"/>
                     <constraint firstItem="ilz-E3-wbY" firstAttribute="leading" secondItem="k3e-cS-bYO" secondAttribute="trailing" constant="10" id="CcW-lO-tkr"/>
-                    <constraint firstItem="eGx-Gq-ccf" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="21" id="HAp-7h-Ske"/>
+                    <constraint firstItem="eGx-Gq-ccf" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="10" id="HAp-7h-Ske"/>
                     <constraint firstItem="eGx-Gq-ccf" firstAttribute="top" secondItem="YS3-TX-L8r" secondAttribute="bottom" constant="37" id="IIr-OX-v89"/>
                     <constraint firstItem="H6F-3F-38f" firstAttribute="centerY" secondItem="YS3-TX-L8r" secondAttribute="centerY" id="Ixr-4l-tTf"/>
                     <constraint firstAttribute="trailingMargin" secondItem="YhQ-VV-Ark" secondAttribute="trailing" id="K8Z-WR-OCe"/>
                     <constraint firstItem="hOw-5a-dWR" firstAttribute="top" secondItem="u7f-fn-79w" secondAttribute="bottom" constant="27" id="Li5-SX-7co"/>
                     <constraint firstAttribute="trailingMargin" secondItem="ilz-E3-wbY" secondAttribute="trailing" id="Mol-qS-YPk"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="0I0-GY-uQj" secondAttribute="bottom" constant="21" id="Oed-DM-A1x"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="0I0-GY-uQj" secondAttribute="bottom" constant="40" id="Oed-DM-A1x"/>
                     <constraint firstAttribute="trailingMargin" secondItem="SxO-t3-RX5" secondAttribute="trailing" id="PhB-gd-W7A"/>
                     <constraint firstItem="u7f-fn-79w" firstAttribute="top" secondItem="eGx-Gq-ccf" secondAttribute="bottom" constant="42" id="SeT-YM-dAW"/>
-                    <constraint firstItem="k3e-cS-bYO" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="21" id="VS3-B9-ZAT"/>
+                    <constraint firstItem="k3e-cS-bYO" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="10" id="VS3-B9-ZAT"/>
                     <constraint firstAttribute="leadingMargin" secondItem="2w8-5N-OHx" secondAttribute="leading" id="XFG-Yz-46q"/>
                     <constraint firstItem="YhQ-VV-Ark" firstAttribute="leading" secondItem="PiQ-sJ-avt" secondAttribute="trailing" constant="5" id="YDa-Sd-0aX"/>
                     <constraint firstItem="PiQ-sJ-avt" firstAttribute="centerY" secondItem="eGx-Gq-ccf" secondAttribute="centerY" id="Z2L-Ol-HaO"/>
@@ -128,12 +132,12 @@
                     <constraint firstItem="k3e-cS-bYO" firstAttribute="top" secondItem="hOw-5a-dWR" secondAttribute="bottom" constant="27" id="jgk-dB-1hD"/>
                     <constraint firstAttribute="trailingMargin" secondItem="2w8-5N-OHx" secondAttribute="trailing" id="kKY-Kh-FcB"/>
                     <constraint firstAttribute="topMargin" secondItem="2w8-5N-OHx" secondAttribute="top" id="kxX-iR-d3P"/>
-                    <constraint firstItem="u7f-fn-79w" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="21" id="maS-ML-Maj"/>
+                    <constraint firstItem="u7f-fn-79w" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="10" id="maS-ML-Maj"/>
                     <constraint firstItem="k3e-cS-bYO" firstAttribute="top" secondItem="hOw-5a-dWR" secondAttribute="bottom" constant="27" id="ocS-y3-blz"/>
                     <constraint firstItem="ilz-E3-wbY" firstAttribute="centerY" secondItem="k3e-cS-bYO" secondAttribute="centerY" id="rcb-0k-LRu"/>
                     <constraint firstItem="eGx-Gq-ccf" firstAttribute="top" secondItem="YS3-TX-L8r" secondAttribute="bottom" constant="48" id="s1h-Tv-E13"/>
                     <constraint firstItem="SxO-t3-RX5" firstAttribute="centerY" secondItem="hOw-5a-dWR" secondAttribute="centerY" id="u5Q-dp-HBB"/>
-                    <constraint firstItem="YS3-TX-L8r" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="21" id="xmI-vV-ezf"/>
+                    <constraint firstItem="YS3-TX-L8r" firstAttribute="leading" secondItem="0I0-GY-uQj" secondAttribute="trailing" constant="10" id="xmI-vV-ezf"/>
                     <constraint firstItem="SxO-t3-RX5" firstAttribute="leading" secondItem="hOw-5a-dWR" secondAttribute="trailing" constant="10" id="zO6-Kc-PX9"/>
                     <constraint firstItem="YS3-TX-L8r" firstAttribute="top" secondItem="0I0-GY-uQj" secondAttribute="top" constant="5" id="zyW-LP-PWd"/>
                 </constraints>
@@ -156,6 +160,7 @@
                 <outlet property="actDetTimeLbl" destination="H6F-3F-38f" id="k0a-0r-whx"/>
                 <outlet property="actDetTitleLbl" destination="2w8-5N-OHx" id="yDb-HW-OAU"/>
                 <outlet property="actDetTypeLbl" destination="SxO-t3-RX5" id="XRc-dP-f7L"/>
+                <outlet property="shopAddressBtn" destination="YhQ-VV-Ark" id="sTA-H1-9lI"/>
             </connections>
             <point key="canvasLocation" x="470.5" y="322.5"/>
         </tableViewCell>
