--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpDetDisTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpDetDisTableViewCell.xib
@@ -21,6 +21,12 @@
                             <constraint firstAttribute="width" secondItem="DxR-Ra-an9" secondAttribute="height" multiplier="1:1" id="Ybe-b5-8yF"/>
                             <constraint firstAttribute="width" constant="27" id="pwG-Gp-DvC"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <real key="value" value="13.5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pmt-Eo-mmW">
                         <rect key="frame" x="43" y="8" width="42" height="21"/>
