--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpHeaderTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpHeaderTableViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -32,38 +33,36 @@
                             <action selector="userNameBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4CP-T5-cyC"/>
                         </connections>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jEM-iS-ULF">
-                        <rect key="frame" x="8" y="8" width="27" height="27"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ejo-kI-ig5">
+                        <rect key="frame" x="3" y="3" width="37" height="37"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="27" id="Qh2-Cg-47r"/>
-                            <constraint firstAttribute="height" constant="27" id="qc1-mW-LNi"/>
+                            <constraint firstAttribute="width" secondItem="ejo-kI-ig5" secondAttribute="height" multiplier="1:1" id="6Sy-47-Mis"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskstobounds" value="YES"/>
-                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerradius">
-                                <real key="value" value="13.5"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <real key="value" value="16.5"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
-                    </button>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="leading" secondItem="ejo-kI-ig5" secondAttribute="trailing" constant="3" id="4E4-3Y-fby"/>
                     <constraint firstItem="WAQ-0c-EgR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="9YN-Rh-enU"/>
-                    <constraint firstItem="0bo-mL-OT9" firstAttribute="leading" secondItem="jEM-iS-ULF" secondAttribute="trailing" constant="8" id="9fZ-kA-Tes"/>
                     <constraint firstItem="0bo-mL-OT9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-1" id="ExH-ad-ui9"/>
-                    <constraint firstItem="0bo-mL-OT9" firstAttribute="centerY" secondItem="jEM-iS-ULF" secondAttribute="centerY" id="HRZ-FZ-0VF"/>
                     <constraint firstItem="0bo-mL-OT9" firstAttribute="baseline" secondItem="WAQ-0c-EgR" secondAttribute="baseline" id="IXQ-6O-0Ni"/>
-                    <constraint firstItem="jEM-iS-ULF" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="JdB-il-ejl"/>
-                    <constraint firstItem="0bo-mL-OT9" firstAttribute="centerY" secondItem="jEM-iS-ULF" secondAttribute="centerY" id="M8H-oB-fUU"/>
+                    <constraint firstAttribute="leadingMargin" secondItem="ejo-kI-ig5" secondAttribute="leading" id="Ub5-7L-gjt"/>
+                    <constraint firstItem="ejo-kI-ig5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-5" id="Y7q-dF-WdQ"/>
                     <constraint firstAttribute="bottomMargin" secondItem="0bo-mL-OT9" secondAttribute="bottom" constant="-2" id="bL7-Gk-b0Z"/>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="centerY" secondItem="ejo-kI-ig5" secondAttribute="centerY" id="gVP-jY-jds"/>
                     <constraint firstAttribute="trailingMargin" secondItem="WAQ-0c-EgR" secondAttribute="trailing" id="iTM-pj-loe"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="ejo-kI-ig5" secondAttribute="bottom" constant="-5" id="pWO-1E-GP4"/>
+                    <constraint firstItem="0bo-mL-OT9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="35" id="rX8-t0-HwZ"/>
                     <constraint firstAttribute="bottomMargin" secondItem="WAQ-0c-EgR" secondAttribute="bottom" constant="3" id="tpr-hX-BTT"/>
-                    <constraint firstAttribute="leadingMargin" secondItem="jEM-iS-ULF" secondAttribute="leading" id="yht-r8-Hp9"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
-                        <exclude reference="JdB-il-ejl"/>
                         <exclude reference="ExH-ad-ui9"/>
-                        <exclude reference="M8H-oB-fUU"/>
                         <exclude reference="bL7-Gk-b0Z"/>
                     </mask>
                 </variation>
@@ -71,10 +70,10 @@
             <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="creatTimeLbl" destination="WAQ-0c-EgR" id="njf-5u-Sgl"/>
-                <outlet property="userImgBtn" destination="jEM-iS-ULF" id="bLy-zd-q5z"/>
+                <outlet property="userImgView" destination="ejo-kI-ig5" id="LBc-IG-rgc"/>
                 <outlet property="userNameBtn" destination="0bo-mL-OT9" id="Gyr-Co-exo"/>
             </connections>
-            <point key="canvasLocation" x="139" y="709"/>
+            <point key="canvasLocation" x="206" y="756"/>
         </tableViewCell>
     </objects>
 </document>
