--- a/Boom小组项目111111/Boom小组项目/Classes/Scenes/ViewController/Page_4/RegisterViewController.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/Scenes/ViewController/Page_4/RegisterViewController.xib
@@ -6,6 +6,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegisterViewController">
             <connections>
+                <outlet property="emailTextField" destination="k0s-H0-TK3" id="v2z-JF-wBM"/>
+                <outlet property="passwordTextField" destination="sVm-P7-BIv" id="hHC-oL-mpU"/>
+                <outlet property="usernameTextField" destination="msi-IV-HwY" id="gbf-HJ-jn4"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,11 +17,11 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Register_bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="BbM-Wq-KDX">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg.png" translatesAutoresizingMaskIntoConstraints="NO" id="BbM-Wq-KDX">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                 </imageView>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" background="textFeild.png" translatesAutoresizingMaskIntoConstraints="NO" id="sVm-P7-BIv">
-                    <rect key="frame" x="60" y="427" width="294" height="50"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="center" minimumFontSize="17" background="textFeild.png" translatesAutoresizingMaskIntoConstraints="NO" id="sVm-P7-BIv">
+                    <rect key="frame" x="60" y="180" width="294" height="50"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="xpg-Hj-WwY"/>
@@ -27,13 +30,16 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w0Z-wW-66w">
-                    <rect key="frame" x="60" y="489" width="294" height="50"/>
-                    <state key="normal" title="register" image="Register.png">
+                    <rect key="frame" x="60" y="240" width="294" height="50"/>
+                    <state key="normal" image="register.png">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="RegsiterAction:" destination="-1" eventType="touchUpInside" id="jP3-Bz-UYY"/>
+                    </connections>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="name" textAlignment="center" minimumFontSize="17" background="textFeild.png" translatesAutoresizingMaskIntoConstraints="NO" id="msi-IV-HwY">
-                    <rect key="frame" x="60" y="243" width="294" height="50"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名(汉字,字母和数字)" textAlignment="center" minimumFontSize="17" background="textFeild.png" translatesAutoresizingMaskIntoConstraints="NO" id="msi-IV-HwY">
+                    <rect key="frame" x="60" y="60" width="294" height="50"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="l1X-k2-l8k"/>
@@ -41,8 +47,8 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email or address" textAlignment="center" minimumFontSize="17" background="textFeild.png" translatesAutoresizingMaskIntoConstraints="NO" id="k0s-H0-TK3">
-                    <rect key="frame" x="60" y="303" width="294" height="50"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="邮箱(eg: XXX@XX.com)" textAlignment="center" minimumFontSize="17" background="textFeild.png" translatesAutoresizingMaskIntoConstraints="NO" id="k0s-H0-TK3">
+                    <rect key="frame" x="60" y="120" width="294" height="50"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="AuR-3B-5o9"/>
@@ -51,6 +57,16 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mw8-oE-fqd">
+                    <rect key="frame" x="60" y="305" width="294" height="50"/>
+                    <state key="normal" image="goback.png">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="backAction:" destination="-1" eventType="touchUpInside" id="we0-yj-4bu"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -59,17 +75,21 @@
                 <constraint firstItem="sVm-P7-BIv" firstAttribute="height" secondItem="k0s-H0-TK3" secondAttribute="height" id="45e-4t-4fo"/>
                 <constraint firstItem="msi-IV-HwY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="8p8-JV-dIm"/>
                 <constraint firstItem="w0Z-wW-66w" firstAttribute="width" secondItem="sVm-P7-BIv" secondAttribute="width" id="9eq-Z4-YOD"/>
-                <constraint firstItem="msi-IV-HwY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="243" id="9pa-G5-eAw"/>
+                <constraint firstItem="msi-IV-HwY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="9pa-G5-eAw"/>
                 <constraint firstItem="BbM-Wq-KDX" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="AgA-fJ-nOa"/>
                 <constraint firstItem="sVm-P7-BIv" firstAttribute="width" secondItem="k0s-H0-TK3" secondAttribute="width" id="Cna-8z-2dh"/>
-                <constraint firstItem="sVm-P7-BIv" firstAttribute="top" secondItem="k0s-H0-TK3" secondAttribute="bottom" constant="74" id="Djv-0f-xIN"/>
-                <constraint firstItem="w0Z-wW-66w" firstAttribute="top" secondItem="sVm-P7-BIv" secondAttribute="bottom" constant="12" id="ETK-jn-Uzc"/>
+                <constraint firstItem="sVm-P7-BIv" firstAttribute="top" secondItem="k0s-H0-TK3" secondAttribute="bottom" constant="10" id="Djv-0f-xIN"/>
+                <constraint firstItem="w0Z-wW-66w" firstAttribute="top" secondItem="sVm-P7-BIv" secondAttribute="bottom" constant="10" id="ETK-jn-Uzc"/>
                 <constraint firstAttribute="trailing" secondItem="msi-IV-HwY" secondAttribute="trailing" constant="60" id="Ek1-ZW-b7s"/>
                 <constraint firstItem="k0s-H0-TK3" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="IdX-Fy-bMY"/>
+                <constraint firstItem="mw8-oE-fqd" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="KRw-c0-yPy"/>
+                <constraint firstItem="mw8-oE-fqd" firstAttribute="top" secondItem="w0Z-wW-66w" secondAttribute="bottom" constant="15" id="LZ5-St-7eS"/>
                 <constraint firstItem="BbM-Wq-KDX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="M4t-rf-5Eu"/>
                 <constraint firstItem="w0Z-wW-66w" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="PZf-cM-bNS"/>
                 <constraint firstItem="k0s-H0-TK3" firstAttribute="top" secondItem="msi-IV-HwY" secondAttribute="bottom" constant="10" id="TUb-DK-aY1"/>
+                <constraint firstItem="mw8-oE-fqd" firstAttribute="height" secondItem="w0Z-wW-66w" secondAttribute="height" id="ZhE-ny-kL7"/>
                 <constraint firstAttribute="bottom" secondItem="BbM-Wq-KDX" secondAttribute="bottom" id="bE5-h8-Ea1"/>
+                <constraint firstItem="mw8-oE-fqd" firstAttribute="width" secondItem="w0Z-wW-66w" secondAttribute="width" id="dPv-JH-KZ1"/>
                 <constraint firstItem="sVm-P7-BIv" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="dq7-1o-Ohc"/>
                 <constraint firstAttribute="trailing" secondItem="BbM-Wq-KDX" secondAttribute="trailing" id="en8-5x-W1j"/>
                 <constraint firstItem="k0s-H0-TK3" firstAttribute="height" secondItem="msi-IV-HwY" secondAttribute="height" id="u2y-6Z-h0c"/>
@@ -78,8 +98,9 @@
         </view>
     </objects>
     <resources>
-        <image name="Register.png" width="470" height="78"/>
-        <image name="Register_bg.png" width="640" height="1136"/>
+        <image name="bg.png" width="640" height="1136"/>
+        <image name="goback.png" width="470" height="78"/>
+        <image name="register.png" width="470" height="78"/>
         <image name="textFeild.png" width="472" height="78"/>
     </resources>
 </document>
