--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExperienceTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExperienceTableViewCell.xib
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="expID" rowHeight="359" id="KGk-i7-Jjw" customClass="ExperienceTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="422" height="358"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="expID" rowHeight="262" id="KGk-i7-Jjw" customClass="ExperienceTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="261"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="422" height="357"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="260"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="        Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCb-fN-bKf">
+                        <rect key="frame" x="5" y="205" width="365" height="50"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jdk-jr-dhH">
-                        <rect key="frame" x="6" y="1" width="410" height="247"/>
+                        <rect key="frame" x="5" y="0.0" width="365" height="200"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="jdk-jr-dhH" secondAttribute="height" multiplier="406:219" id="FWM-e4-m5S"/>
+                            <constraint firstAttribute="height" constant="200" id="LFf-oS-hyj"/>
                             <constraint firstAttribute="width" secondItem="jdk-jr-dhH" secondAttribute="height" multiplier="410:247" id="OnG-Fb-VOc"/>
-                            <constraint firstAttribute="height" constant="247" id="Yeo-bM-zLm"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -29,31 +34,22 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCb-fN-bKf">
-                        <rect key="frame" x="8" y="266" width="406" height="63"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="63" id="31V-z2-TjN"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="jdk-jr-dhH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="3Cz-Rl-2XO"/>
-                    <constraint firstAttribute="leadingMargin" secondItem="PCb-fN-bKf" secondAttribute="leading" id="JSI-tT-24O"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="PCb-fN-bKf" secondAttribute="bottom" constant="20" id="Z34-2K-OBm"/>
-                    <constraint firstItem="PCb-fN-bKf" firstAttribute="top" secondItem="jdk-jr-dhH" secondAttribute="bottom" constant="18" id="qKU-zV-bvf"/>
-                    <constraint firstItem="jdk-jr-dhH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="rFX-Gv-sFP"/>
-                    <constraint firstAttribute="trailing" secondItem="jdk-jr-dhH" secondAttribute="trailing" constant="6" id="vp0-Oa-fJa"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="PCb-fN-bKf" secondAttribute="trailing" id="x13-q1-5xh"/>
+                    <constraint firstItem="PCb-fN-bKf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="0zE-bS-ruI"/>
+                    <constraint firstAttribute="trailing" secondItem="PCb-fN-bKf" secondAttribute="trailing" constant="5" id="2RW-V0-Zra"/>
+                    <constraint firstItem="jdk-jr-dhH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="IYi-cY-4Gp"/>
+                    <constraint firstAttribute="bottom" secondItem="PCb-fN-bKf" secondAttribute="bottom" constant="5" id="VmR-1x-Ifh"/>
+                    <constraint firstItem="jdk-jr-dhH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XVE-21-l7U"/>
+                    <constraint firstAttribute="trailing" secondItem="jdk-jr-dhH" secondAttribute="trailing" constant="5" id="hl5-0w-a4D"/>
+                    <constraint firstItem="PCb-fN-bKf" firstAttribute="top" secondItem="jdk-jr-dhH" secondAttribute="bottom" constant="5" id="yhN-S0-IrK"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="coverImgView" destination="jdk-jr-dhH" id="Bof-Hn-atr"/>
                 <outlet property="desLbl" destination="PCb-fN-bKf" id="IkW-Ex-OYj"/>
             </connections>
-            <point key="canvasLocation" x="512" y="351"/>
+            <point key="canvasLocation" x="409" y="303.5"/>
         </tableViewCell>
     </objects>
 </document>
