--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ActivityTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ActivityTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -113,7 +113,7 @@
                 <outlet property="actTitleLbl" destination="6iG-ih-IhO" id="dWt-e8-P9D"/>
                 <outlet property="actTypeLbl" destination="Lmp-nx-C4H" id="GwT-wx-KP8"/>
             </connections>
-            <point key="canvasLocation" x="143.5" y="204.5"/>
+            <point key="canvasLocation" x="222.5" y="202.5"/>
         </tableViewCell>
     </objects>
 </document>
