--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpDetDisTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpDetDisTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -8,71 +8,74 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EDDID" rowHeight="70" id="KGk-i7-Jjw" customClass="ExpDetDisTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EDDID" rowHeight="61" id="KGk-i7-Jjw" customClass="ExpDetDisTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="69"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DxR-Ra-an9">
-                        <rect key="frame" x="8" y="8" width="27" height="27"/>
+                        <rect key="frame" x="5" y="5" width="25" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="DxR-Ra-an9" secondAttribute="height" multiplier="1:1" id="Ybe-b5-8yF"/>
-                            <constraint firstAttribute="width" constant="27" id="pwG-Gp-DvC"/>
+                            <constraint firstAttribute="width" secondItem="DxR-Ra-an9" secondAttribute="height" multiplier="1:1" id="oiM-rR-2ew"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <real key="value" value="13.5"/>
+                                <integer key="value" value="13"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pmt-Eo-mmW">
-                        <rect key="frame" x="43" y="8" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gek-r5-hyq">
+                        <rect key="frame" x="212" y="5" width="150" height="18"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="wih-bx-Ypg"/>
+                            <constraint firstAttribute="width" constant="150" id="Kor-vA-8Y0"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wis-JF-sSH">
+                        <rect key="frame" x="35" y="30" width="180" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="180" id="oiR-QC-kzM"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gek-r5-hyq">
-                        <rect key="frame" x="364" y="8" width="42" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pmt-Eo-mmW">
+                        <rect key="frame" x="35" y="5" width="180" height="18"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="6E2-2M-BMT"/>
+                            <constraint firstAttribute="width" constant="180" id="TBZ-g1-0ER"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wis-JF-sSH">
-                        <rect key="frame" x="43" y="31" width="363" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
-                    <constraint firstAttribute="topMargin" secondItem="DxR-Ra-an9" secondAttribute="top" id="EKI-Pu-Lqb"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="wis-JF-sSH" secondAttribute="trailing" id="Hip-Ks-nHf"/>
-                    <constraint firstItem="Pmt-Eo-mmW" firstAttribute="top" secondItem="DxR-Ra-an9" secondAttribute="top" id="Jjb-Lj-0Xs"/>
-                    <constraint firstAttribute="leadingMargin" secondItem="DxR-Ra-an9" secondAttribute="leading" id="T6c-Jj-VgT"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="gek-r5-hyq" secondAttribute="trailing" id="g5Q-bz-oyV"/>
-                    <constraint firstItem="Pmt-Eo-mmW" firstAttribute="leading" secondItem="DxR-Ra-an9" secondAttribute="trailing" constant="8" id="oi0-Qf-Nlx"/>
-                    <constraint firstItem="wis-JF-sSH" firstAttribute="leading" secondItem="Pmt-Eo-mmW" secondAttribute="trailing" constant="-42" id="qSL-bA-1zl"/>
-                    <constraint firstAttribute="topMargin" secondItem="gek-r5-hyq" secondAttribute="top" id="v4O-ng-q8m"/>
-                    <constraint firstItem="wis-JF-sSH" firstAttribute="leading" secondItem="DxR-Ra-an9" secondAttribute="trailing" constant="8" id="v7k-G8-i75"/>
-                    <constraint firstItem="wis-JF-sSH" firstAttribute="top" secondItem="Pmt-Eo-mmW" secondAttribute="bottom" constant="2" id="whd-IN-K3w"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="gek-r5-hyq" secondAttribute="trailing" constant="5" id="4BX-46-XuZ"/>
+                    <constraint firstItem="Pmt-Eo-mmW" firstAttribute="leading" secondItem="DxR-Ra-an9" secondAttribute="trailing" constant="5" id="5Fv-PV-gcO"/>
+                    <constraint firstAttribute="bottom" secondItem="DxR-Ra-an9" secondAttribute="bottom" constant="30" id="Bzd-bs-JXD"/>
+                    <constraint firstItem="DxR-Ra-an9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="Jwc-4l-Bkq"/>
+                    <constraint firstItem="gek-r5-hyq" firstAttribute="top" secondItem="Pmt-Eo-mmW" secondAttribute="top" id="ckw-1b-vzC"/>
+                    <constraint firstItem="Pmt-Eo-mmW" firstAttribute="top" secondItem="DxR-Ra-an9" secondAttribute="top" id="ouP-NJ-20A"/>
+                    <constraint firstItem="DxR-Ra-an9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="pAT-S0-bwf"/>
+                    <constraint firstItem="wis-JF-sSH" firstAttribute="leading" secondItem="DxR-Ra-an9" secondAttribute="trailing" constant="5" id="uUB-kS-MOl"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="wis-JF-sSH" secondAttribute="bottom" constant="5" id="z8u-0R-ODu"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="creatTimeLbl" destination="gek-r5-hyq" id="Yr1-rW-5pW"/>
                 <outlet property="disLbl" destination="wis-JF-sSH" id="cZU-nd-ceI"/>
                 <outlet property="userImgView" destination="DxR-Ra-an9" id="4Un-xn-F0Q"/>
                 <outlet property="userNameLbl" destination="Pmt-Eo-mmW" id="YJY-z0-Hsy"/>
             </connections>
-            <point key="canvasLocation" x="32" y="327"/>
+            <point key="canvasLocation" x="162.5" y="304.5"/>
         </tableViewCell>
     </objects>
 </document>
