--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpDetHeader_2TableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpDetHeader_2TableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -8,80 +8,117 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExpDetH_2" rowHeight="71" id="KGk-i7-Jjw" customClass="ExpDetHeader_2TableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="428" height="71"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExpDetH_2" rowHeight="412" id="KGk-i7-Jjw" customClass="ExpDetHeader_2TableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="412"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="428" height="70"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="411"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dhc-e2-9Mj">
-                        <rect key="frame" x="67" y="46" width="80" height="16"/>
+                        <rect key="frame" x="69" y="253" width="130" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="EhE-U3-y87"/>
+                            <constraint firstAttribute="height" constant="16" id="2rf-t8-HDH"/>
+                            <constraint firstAttribute="width" constant="130" id="ECi-h5-YHJ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign_address.png" translatesAutoresizingMaskIntoConstraints="NO" id="vCN-4M-Nrc">
-                        <rect key="frame" x="157" y="48" width="12" height="12"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="12" id="eIn-C3-fLv"/>
-                            <constraint firstAttribute="width" secondItem="vCN-4M-Nrc" secondAttribute="height" multiplier="1:1" id="oRl-e8-uaZ"/>
-                        </constraints>
-                    </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="ExpDetH_2" translatesAutoresizingMaskIntoConstraints="NO" id="ueV-8t-yeh">
-                        <rect key="frame" x="8" y="8" width="54" height="54"/>
+                        <rect key="frame" x="5" y="215" width="54" height="54"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="ueV-8t-yeh" secondAttribute="height" multiplier="1:1" id="33M-Vo-mWd"/>
+                            <constraint firstAttribute="height" constant="54" id="2cY-R8-rbF"/>
+                            <constraint firstAttribute="width" secondItem="ueV-8t-yeh" secondAttribute="height" multiplier="1:1" id="m8f-kl-JPu"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                <integer key="value" value="17"/>
+                                <integer key="value" value="27"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Sl-km-NOW">
-                        <rect key="frame" x="67" y="8" width="80" height="16"/>
+                        <rect key="frame" x="69" y="215" width="80" height="16"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="beX-UO-aMt"/>
+                            <constraint firstAttribute="width" constant="80" id="pcR-3k-UBm"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18c-z4-JV2">
-                        <rect key="frame" x="177" y="41" width="213" height="27"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
-                        <state key="normal" title="Button">
-                            <color key="titleColor" red="0.16862745098039217" green="0.54117647058823526" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="18c-z4-JV2">
+                        <rect key="frame" x="267" y="253" width="100" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="Gh4-BN-gHw"/>
+                        </constraints>
+                        <state key="normal">
+                            <color key="titleColor" red="0.0" green="0.7137255072593689" blue="0.50980395078659058" alpha="1" colorSpace="deviceRGB"/>
                         </state>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rmN-oG-DcC">
+                        <rect key="frame" x="5" y="274" width="365" height="84"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eSH-jm-MpT" customClass="SDCycleScrollView">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="200" id="8Ei-bl-ivU"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="    评论" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wFb-lI-KQK">
+                        <rect key="frame" x="0.0" y="390" width="375" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="AOM-YH-Zi6"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign_address.png" translatesAutoresizingMaskIntoConstraints="NO" id="vCN-4M-Nrc">
+                        <rect key="frame" x="225" y="253" width="16" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="vCN-4M-Nrc" secondAttribute="height" multiplier="1:1" id="OHc-Yk-IVn"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Dhc-e2-9Mj" firstAttribute="leading" secondItem="ueV-8t-yeh" secondAttribute="trailing" constant="5" id="2YU-xU-pja"/>
-                    <constraint firstItem="9Sl-km-NOW" firstAttribute="leading" secondItem="ueV-8t-yeh" secondAttribute="trailing" constant="5" id="2jc-Fg-Oqu"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="18c-z4-JV2" secondAttribute="trailing" constant="30" id="6NV-nD-5aI"/>
-                    <constraint firstItem="18c-z4-JV2" firstAttribute="centerY" secondItem="vCN-4M-Nrc" secondAttribute="centerY" id="78F-Qs-eYY"/>
-                    <constraint firstAttribute="topMargin" secondItem="ueV-8t-yeh" secondAttribute="top" id="8aI-Nt-5bE"/>
-                    <constraint firstItem="vCN-4M-Nrc" firstAttribute="centerY" secondItem="Dhc-e2-9Mj" secondAttribute="centerY" id="BNo-6E-cPp"/>
-                    <constraint firstItem="Dhc-e2-9Mj" firstAttribute="bottom" secondItem="ueV-8t-yeh" secondAttribute="bottom" id="Bcm-Lj-dQs"/>
-                    <constraint firstItem="18c-z4-JV2" firstAttribute="leading" secondItem="vCN-4M-Nrc" secondAttribute="trailing" constant="8" id="MWh-G4-U6b"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="ueV-8t-yeh" secondAttribute="bottom" id="Sqj-5J-xwc"/>
-                    <constraint firstItem="9Sl-km-NOW" firstAttribute="top" secondItem="ueV-8t-yeh" secondAttribute="top" id="Wmz-jJ-EyM"/>
-                    <constraint firstItem="vCN-4M-Nrc" firstAttribute="leading" secondItem="Dhc-e2-9Mj" secondAttribute="trailing" constant="10" id="Yl1-JT-aMg"/>
-                    <constraint firstAttribute="leadingMargin" secondItem="ueV-8t-yeh" secondAttribute="leading" id="o5t-7s-yWX"/>
+                    <constraint firstAttribute="trailing" secondItem="wFb-lI-KQK" secondAttribute="trailing" id="5X2-w1-CPS"/>
+                    <constraint firstItem="18c-z4-JV2" firstAttribute="height" secondItem="vCN-4M-Nrc" secondAttribute="height" id="7xc-2p-kws"/>
+                    <constraint firstItem="eSH-jm-MpT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="8s0-zs-iio"/>
+                    <constraint firstItem="eSH-jm-MpT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="AiQ-TK-pka"/>
+                    <constraint firstAttribute="trailing" secondItem="rmN-oG-DcC" secondAttribute="trailing" constant="5" id="EDJ-xT-EZE"/>
+                    <constraint firstItem="wFb-lI-KQK" firstAttribute="top" secondItem="rmN-oG-DcC" secondAttribute="bottom" constant="32" id="H8E-7g-dy1"/>
+                    <constraint firstItem="rmN-oG-DcC" firstAttribute="top" secondItem="Dhc-e2-9Mj" secondAttribute="bottom" constant="5" id="Mb7-oj-8JZ"/>
+                    <constraint firstItem="wFb-lI-KQK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PKQ-XT-sbB"/>
+                    <constraint firstItem="18c-z4-JV2" firstAttribute="bottom" secondItem="vCN-4M-Nrc" secondAttribute="bottom" id="V6l-Hq-sRd"/>
+                    <constraint firstAttribute="trailing" secondItem="eSH-jm-MpT" secondAttribute="trailing" id="Weh-67-OaX"/>
+                    <constraint firstItem="ueV-8t-yeh" firstAttribute="top" secondItem="eSH-jm-MpT" secondAttribute="bottom" constant="15" id="YwB-fg-sVI"/>
+                    <constraint firstItem="rmN-oG-DcC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Yxn-dr-aXJ"/>
+                    <constraint firstItem="vCN-4M-Nrc" firstAttribute="height" secondItem="Dhc-e2-9Mj" secondAttribute="height" id="dAY-kJ-h6I"/>
+                    <constraint firstItem="ueV-8t-yeh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-3" id="dKP-RT-ToR"/>
+                    <constraint firstItem="Dhc-e2-9Mj" firstAttribute="leading" secondItem="ueV-8t-yeh" secondAttribute="trailing" constant="10" id="fMh-TQ-ubQ"/>
+                    <constraint firstItem="9Sl-km-NOW" firstAttribute="leading" secondItem="ueV-8t-yeh" secondAttribute="trailing" constant="10" id="h99-pU-gOL"/>
+                    <constraint firstItem="9Sl-km-NOW" firstAttribute="top" secondItem="ueV-8t-yeh" secondAttribute="top" id="kdI-R4-ajx"/>
+                    <constraint firstItem="Dhc-e2-9Mj" firstAttribute="bottom" secondItem="ueV-8t-yeh" secondAttribute="bottom" id="lMM-KY-l44"/>
+                    <constraint firstAttribute="bottom" secondItem="wFb-lI-KQK" secondAttribute="bottom" id="qw1-oB-iAB"/>
+                    <constraint firstItem="vCN-4M-Nrc" firstAttribute="leading" secondItem="Dhc-e2-9Mj" secondAttribute="trailing" constant="26" id="vck-cF-VtA"/>
+                    <constraint firstItem="18c-z4-JV2" firstAttribute="leading" secondItem="vCN-4M-Nrc" secondAttribute="trailing" constant="26" id="vqQ-uR-SKo"/>
+                    <constraint firstItem="vCN-4M-Nrc" firstAttribute="bottom" secondItem="Dhc-e2-9Mj" secondAttribute="bottom" id="wrV-5l-P1a"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="creatTimeLbl" destination="Dhc-e2-9Mj" id="VIq-Zi-leh"/>
+                <outlet property="descLabel" destination="rmN-oG-DcC" id="C5t-J1-weQ"/>
+                <outlet property="imgsView" destination="eSH-jm-MpT" id="TeV-Hc-sd3"/>
                 <outlet property="shopNameBtn" destination="18c-z4-JV2" id="LUe-TW-e5y"/>
                 <outlet property="userImgView" destination="ueV-8t-yeh" id="O0e-2G-ZPb"/>
                 <outlet property="userNameLbl" destination="9Sl-km-NOW" id="UUj-dg-QoK"/>
             </connections>
-            <point key="canvasLocation" x="418" y="266.5"/>
+            <point key="canvasLocation" x="444.5" y="358"/>
         </tableViewCell>
     </objects>
     <resources>
