--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpFooterTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpFooterTableViewCell.xib
@@ -1,38 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="expFID" rowHeight="41" id="KGk-i7-Jjw" customClass="ExpFooterTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="422" height="41"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="expFID" rowHeight="43" id="KGk-i7-Jjw" customClass="ExpFooterTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="422" height="42"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="422" height="40"/>
+                <rect key="frame" x="0.0" y="0.0" width="422" height="41"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sign_address.png" translatesAutoresizingMaskIntoConstraints="NO" id="ean-8s-sdp">
-                        <rect key="frame" x="8" y="13" width="15" height="15"/>
+                        <rect key="frame" x="10" y="11" width="26" height="26"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="15" id="8Wm-l6-1jy"/>
-                            <constraint firstAttribute="width" constant="15" id="Kif-1m-vBv"/>
+                            <constraint firstAttribute="width" secondItem="ean-8s-sdp" secondAttribute="height" multiplier="1:1" id="qgI-Yy-2wg"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SHT-uo-sR9">
-                        <rect key="frame" x="364" y="10" width="50" height="22"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="50" id="GPR-Hi-tbt"/>
-                        </constraints>
-                        <state key="normal" title="Button" image="heart_grey_small.png"/>
-                        <connections>
-                            <action selector="collectBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="xaS-mA-hFC"/>
-                        </connections>
-                    </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y30-yz-iIp">
-                        <rect key="frame" x="315" y="6" width="50" height="30"/>
+                        <rect key="frame" x="315" y="7" width="50" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="D4W-4P-ZLh"/>
                             <constraint firstAttribute="width" constant="50" id="QOt-bg-pbw"/>
@@ -43,7 +33,7 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xPe-6N-hd9">
-                        <rect key="frame" x="393" y="10" width="21" height="21"/>
+                        <rect key="frame" x="393" y="11" width="21" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="21" id="t0w-ON-eUl"/>
                             <constraint firstAttribute="height" constant="21" id="wAx-Ql-zwy"/>
@@ -53,9 +43,9 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3uj-9g-Puq">
-                        <rect key="frame" x="26" y="5" width="150" height="30"/>
+                        <rect key="frame" x="46" y="9" width="200" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="150" id="cue-Ng-RrQ"/>
+                            <constraint firstAttribute="width" constant="200" id="8j2-KY-CAA"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <state key="normal" title="Button">
@@ -63,7 +53,7 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jwH-uZ-Owt">
-                        <rect key="frame" x="344" y="10" width="21" height="21"/>
+                        <rect key="frame" x="344" y="11" width="21" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="90S-lS-Xhp"/>
                             <constraint firstAttribute="width" constant="21" id="yRY-pQ-Lag"/>
@@ -72,26 +62,36 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SHT-uo-sR9">
+                        <rect key="frame" x="364" y="11" width="50" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="GPR-Hi-tbt"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="heart_grey_small.png"/>
+                        <connections>
+                            <action selector="collectBtnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="xaS-mA-hFC"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="3uj-9g-Puq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="06N-hc-tiI"/>
                     <constraint firstAttribute="trailingMargin" secondItem="xPe-6N-hd9" secondAttribute="trailing" id="3GH-9u-l0K"/>
+                    <constraint firstAttribute="bottom" secondItem="ean-8s-sdp" secondAttribute="bottom" constant="10" id="56V-fd-Ank"/>
                     <constraint firstItem="SHT-uo-sR9" firstAttribute="leading" secondItem="y30-yz-iIp" secondAttribute="trailing" constant="-1" id="5PK-Ow-YuX"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="3uj-9g-Puq" secondAttribute="bottom" constant="-3" id="DRy-f1-ccf"/>
-                    <constraint firstItem="3uj-9g-Puq" firstAttribute="centerY" secondItem="ean-8s-sdp" secondAttribute="centerY" id="Dv4-Cg-Aoy"/>
+                    <constraint firstItem="ean-8s-sdp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="7sp-La-aeX"/>
+                    <constraint firstItem="3uj-9g-Puq" firstAttribute="leading" secondItem="ean-8s-sdp" secondAttribute="trailing" constant="10" id="Ao6-JL-lDI"/>
                     <constraint firstItem="xPe-6N-hd9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="G4n-xP-ebx"/>
                     <constraint firstItem="SHT-uo-sR9" firstAttribute="baseline" secondItem="jwH-uZ-Owt" secondAttribute="baseline" id="GSH-0a-hr3"/>
-                    <constraint firstItem="3uj-9g-Puq" firstAttribute="leading" secondItem="ean-8s-sdp" secondAttribute="trailing" constant="3" id="Jrj-go-XGa"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="3uj-9g-Puq" secondAttribute="bottom" id="RGB-8a-ETI"/>
                     <constraint firstItem="SHT-uo-sR9" firstAttribute="leading" secondItem="jwH-uZ-Owt" secondAttribute="trailing" constant="-1" id="S5a-tQ-nFo"/>
+                    <constraint firstItem="ean-8s-sdp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="SrA-n5-dNg"/>
                     <constraint firstItem="ean-8s-sdp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="b7d-N4-d8d"/>
-                    <constraint firstItem="3uj-9g-Puq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-3" id="fb6-GG-LVT"/>
                     <constraint firstItem="ean-8s-sdp" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="hjM-5H-XQW"/>
                     <constraint firstItem="ean-8s-sdp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="iIB-aZ-f46"/>
                     <constraint firstAttribute="bottomMargin" secondItem="jwH-uZ-Owt" secondAttribute="bottom" constant="1" id="mUc-nv-w5W"/>
-                    <constraint firstAttribute="leadingMargin" secondItem="ean-8s-sdp" secondAttribute="leading" id="nef-SA-Awa"/>
                     <constraint firstItem="y30-yz-iIp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-2" id="qAY-b9-n3u"/>
                     <constraint firstAttribute="trailingMargin" secondItem="SHT-uo-sR9" secondAttribute="trailing" id="u0w-sz-Kq9"/>
                     <constraint firstItem="jwH-uZ-Owt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="uKR-V3-noH"/>
-                    <constraint firstItem="ean-8s-sdp" firstAttribute="centerY" secondItem="jwH-uZ-Owt" secondAttribute="centerY" id="wvD-XN-elQ"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
@@ -110,7 +110,7 @@
                 <outlet property="place" destination="ean-8s-sdp" id="axP-gj-kc8"/>
                 <outlet property="shopNameBtn" destination="3uj-9g-Puq" id="WF9-5l-5yo"/>
             </connections>
-            <point key="canvasLocation" x="-6" y="278.5"/>
+            <point key="canvasLocation" x="70" y="332"/>
         </tableViewCell>
     </objects>
     <resources>
