--- a/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpHeaderTableViewCell.xib
+++ b/Boom小组项目111111/Boom小组项目/Classes/General/Views/Page_3/ExpHeaderTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -73,7 +73,7 @@
                 <outlet property="userImgView" destination="ejo-kI-ig5" id="LBc-IG-rgc"/>
                 <outlet property="userNameBtn" destination="0bo-mL-OT9" id="Gyr-Co-exo"/>
             </connections>
-            <point key="canvasLocation" x="206" y="756"/>
+            <point key="canvasLocation" x="338" y="370"/>
         </tableViewCell>
     </objects>
 </document>
